clusters/lovenet/apps/home/owncloud-ocis/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud-ocis
  namespace: home
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "network-rfc1918-ips@kubernetescrd"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: "traefik"

  rules:
    - host: &host "cloud.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncloud-ocis
                port:
                  number: 9200

  tls:
    - hosts:
        - *host
